# CryProt

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: bench.yml  publish.yml  pull_request.yml  push.yml  release-plz.yml  rustdoc.yml  zizmor.yml
benches/: bench.rs
cryprot-codes/: CHANGELOG.md  Cargo.toml  README.md
cryprot-codes/benches/: bench.rs
cryprot-codes/src/: ex_conv.rs  lib.rs
cryprot-codes/src/ex_conv/: expander.rs  expander_modd.rs  fast_aes_rng.rs  gf128.rs
cryprot-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
cryprot-core/benches/: bench.rs
cryprot-core/proptest-regressions/: transpose.txt
cryprot-core/proptest-regressions/block/: gf128.txt
cryprot-core/src/: aes_hash.rs  aes_rng.rs  alloc.rs  block.rs  buf.rs  lib.rs  rand_compat.rs  random_oracle.rs  tokio_rayon.rs  transpose.rs  utils.rs
cryprot-core/src/block/: gf128.rs
cryprot-core/src/transpose/: avx2.rs  portable.rs
cryprot-net/: CHANGELOG.md  Cargo.toml  README.md
cryprot-net/benches/: bench.rs
cryprot-net/src/: lib.rs  metrics.rs  testing.rs
cryprot-ot/: CHANGELOG.md  Cargo.toml  README.md
cryprot-ot/benches/: bench.rs
cryprot-ot/docs/: mlkem-ot-protocol.md
cryprot-ot/src/: adapter.rs  base.rs  extension.rs  lib.rs  mlkem_ot.rs  noisy_vole.rs  phase.rs  silent_ot.rs  simplest_ot.rs
cryprot-pprf/: CHANGELOG.md  Cargo.toml  README.md
cryprot-pprf/benches/: bench.rs
cryprot-pprf/src/: lib.rs
seec-codes/: Cargo.toml
seec-codes/benches/: bench.rs
seec-codes/src/: ex_conv.rs  lib.rs
seec-codes/src/ex_conv/: expander.rs  expander_modd.rs  fast_aes_rng.rs  gf128.rs
seec-core/: Cargo.toml
seec-core/benches/: bench.rs
seec-core/src/: aes_hash.rs  aes_rng.rs  alloc.rs  block.rs  buf.rs  lib.rs  random_oracle.rs  test_utils.rs  transpose.rs  utils.rs
seec-core/src/alloc/: thp_alloc.rs
seec-core/src/transpose/: avx2.rs  portable.rs
seec-net/: Cargo.toml
seec-net/benches/: bench.rs
seec-net/src/: lib.rs  metrics.rs  testing.rs
seec-ot/: Cargo.toml
seec-ot/benches/: bench.rs
seec-ot/src/: adapter.rs  base.rs  extension.rs  lib.rs  phase.rs  silent_ot.rs
seec-pprf/: Cargo.toml
seec-pprf/benches/: bench.rs
seec-pprf/src/: lib.rs
src/: lib.rs  testing.rs
