[workspace]
members = [
    "cryprot-codes",
    "cryprot-core",
    "cryprot-net",
    "cryprot-ot",
    "cryprot-pprf",
]
resolver = "2"

[workspace.dependencies]
aes = "0.9.0-pre.2"
anyhow = "1.0.86"
bitvec = "1.0.1"
bytemuck = "1.21.0"
cpufeatures = "0.2.17"
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
cryprot-codes = { path = "cryprot-codes" }
cryprot-core = { path = "cryprot-core" }
cryprot-net = { path = "cryprot-net" }
cryprot-pprf = { path = "cryprot-pprf" }
fastdivide = "0.4.2"
futures = "0.3.30"
hybrid-array = { version = "0.2.3", features = ["bytemuck"] }
libc = "0.2.169"
ndarray = "0.16.1"
num-traits = "0.2.19"
rand = "0.8.5"
rand_core = "0.6.4"
seq-macro = "=0.3.5"
serde = "1.0.203"
subtle = "2.6.1"
thiserror = "2.0.9"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.profiling]
debug = true
inherits = "release"

[profile.optimized-release]
codegen-units = 1
inherits = "release"
lto = "fat"
