[workspace]
members = [
    "cryprot-codes",
    "cryprot-core",
    "cryprot-net",
    "cryprot-ot",
    "cryprot-pprf",
]
resolver = "2"

[workspace.package]
authors = ["Robin Hundt"]
homepage = "https://github.com/robinhundt/CryProt"
repository = "https://github.com/robinhundt/CryProt"

[workspace.dependencies]
aes = "=0.9.0-rc.1"
anyhow = "1.0.86"
bincode = "1.3.3"
bitvec = "1.0.1"
blake3 = "1.5.5"
bytemuck = { version = "1.21.0", features = ["must_cast"] }
cpufeatures = "0.2.17"
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
cryprot-codes = { version = "0.2.0", path = "cryprot-codes" }
cryprot-core = { version = "0.2.0", path = "cryprot-core" }
cryprot-net = { version = "0.2.0", path = "cryprot-net" }
cryprot-pprf = { version = "0.2.0", path = "cryprot-pprf" }
curve25519-dalek = "4.1.3"
fastdivide = "0.4.2"
futures = "0.3.30"
hybrid-array = { version = "0.4.1", features = ["bytemuck"] }
libc = "0.2.169"
ndarray = "0.17.2"
num-traits = "0.2.19"
rand = "0.9.0"
rand_core = "0.9.0"
rand_core_0_6 = { package = "rand_core", version = "0.6" }
rayon = "1.10.0"
s2n-quic = "1.37.0"
seq-macro = "=0.3.5"
serde = "1.0.203"
subtle = "2.6.1"
thiserror = "2.0.9"
tokio = "1.37.0"
tokio-serde = "0.9.0"
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wide = "0.7.32"

[profile.profiling]
debug = true
inherits = "release"

[profile.optimized-release]
codegen-units = 1
inherits = "release"
lto = "fat"

[workspace.lints.clippy]
unwrap_used = "warn"
