[workspace]
members = [
    "cryprot-codes",
    "cryprot-core",
    "cryprot-net",
    "cryprot-ot",
    "cryprot-pprf",
]
resolver = "2"

[workspace.package]
authors = ["Robin Hundt"]
homepage = "https://github.com/robinhundt/CryProt"
repository = "https://github.com/robinhundt/CryProt"

[workspace.dependencies]
aes = "=0.9.0-rc.4"
anyhow = "1.0.102"
bincode = "1.3.3"
bitvec = "1.0.1"
blake3 = "1.5.5"
bytemuck = { version = "1.25.0", features = ["must_cast"] }
cfg-if = "1"
cpufeatures = "0.3.0"
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
cryprot-codes = { version = "0.2.3", path = "cryprot-codes" }
cryprot-core = { version = "0.3.2", path = "cryprot-core" }
cryprot-net = { version = "0.2.3", path = "cryprot-net" }
cryprot-pprf = { version = "0.2.3", path = "cryprot-pprf" }
curve25519-dalek = "4.1.3"
fastdivide = "0.4.2"
futures = "0.3.32"
hybrid-array = { version = "0.4.10", features = ["bytemuck"] }
libc = "0.2.183"
ml-kem = "0.2.2"
module-lattice = "0.1.0"
sha3 = "0.10.8"
ndarray = "0.17.2"
num-traits = "0.2.19"
rand = "0.10.0"
rand_core = "0.10.0"
rand_core_0_6 = { package = "rand_core", version = "0.6" }
rayon = "1.10.0"
s2n-quic = "1.77.0"
seq-macro = "=0.3.6"
serde = "1.0.203"
serde_bytes = "0.11.19"
subtle = { version = "2.6.1", features = ["const-generics"] }
thiserror = "2.0.18"
tokio = "1.50.0"
tokio-serde = "0.9.0"
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wide = "1.2.0"

[profile.profiling]
debug = true
inherits = "release"

[profile.optimized-release]
codegen-units = 1
inherits = "release"
lto = "fat"

[workspace.lints.clippy]
unwrap_used = "warn"
