[package]
description = "Linear codes for Silent OT."
edition = "2021"
keywords = ["expand-convolute"]
license = "MIT"
name = "cryprot-codes"
version = "0.1.0"

authors.workspace = true
repository.workspace = true

[features]
bench-libote = ["dep:libote-codes"]
libote-compat = ["dep:libote-codes"]

[lib]
bench = false

[dependencies]
aes = { workspace = true, features = ["hazmat"] }
bytemuck.workspace = true
cpufeatures.workspace = true
cryprot-core.workspace = true
fastdivide.workspace = true
hybrid-array = { workspace = true }
libote-codes = { version = "0.1.0", git = "https://github.com/robinhundt/libote-codes.git", optional = true }
rand.workspace = true
seq-macro.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
harness = false
name = "bench"
