[package]
edition = "2021"
name = "cryprot-core"
version = "0.1.0"

[lib]
bench = false

[features]
__testing = ["dep:tracing-subscriber"]
nightly = []
num-traits = ["dep:num-traits"]
tokio-rayon = ["dep:rayon", "dep:tokio"]

[dependencies]
aes.workspace = true
blake3 = { workspace = true, features = ["serde", "traits-preview"] }
bytemuck = { workspace = true, features = ["derive"] }
cpufeatures.workspace = true
hybrid-array = { workspace = true }
num-traits = { workspace = true, optional = true }
rand.workspace = true
rand_core.workspace = true
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
subtle.workspace = true
tokio = { workspace = true, features = ["sync"], optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
wide = { workspace = true, features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion.workspace = true
proptest = "1.6.0"

[[bench]]
harness = false
name = "bench"
