[package]
description = "Core primitives for cryptographic protocol implementations."
edition = "2024"
keywords = ["cryptography", "mpc"]
license = "MIT"
name = "cryprot-core"
version = "0.3.0"

authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
bench = false

[features]
__testing = ["dep:tracing-subscriber"]
num-traits = ["dep:num-traits"]
tokio-rayon = ["dep:rayon", "dep:tokio"]

[dependencies]
aes.workspace = true
blake3 = { workspace = true, features = ["serde", "traits-preview"] }
bytemuck = { workspace = true, features = ["derive"] }
cpufeatures.workspace = true
hybrid-array = { workspace = true }
num-traits = { workspace = true, optional = true }
rand.workspace = true
rand_core.workspace = true
rand_core_0_6.workspace = true
rayon = { workspace = true, optional = true }
seq-macro.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"], optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
wide = { workspace = true, features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion.workspace = true
proptest = "1.10.0"

[build-dependencies]
rustc_version = "0.4.1"

[[bench]]
harness = false
name = "bench"
