[package]
edition = "2021"
name = "cryprot-net"
version = "0.1.0"

[features]
__testing = ["dep:anyhow", "metrics"]
metrics = ["dep:tracing-subscriber", "serde/derive"]

[dependencies]
anyhow = { workspace = true, optional = true }
bincode = "1.3.3"
s2n-quic = "1.37.0"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }


[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
cryprot-core = { workspace = true, features = ["__testing"] }
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
harness = false
name = "bench"
required-features = ["__testing"]
