[package]
description = "Networking library for cryptographic protocols built on QUIC."
edition = "2024"
keywords = ["networking", "quic"]
license = "MIT"
name = "cryprot-net"
version = "0.2.2"

authors.workspace = true
repository.workspace = true

[features]
__testing = ["dep:anyhow", "metrics"]
metrics = ["dep:tracing-subscriber", "serde/derive"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
bincode.workspace = true
s2n-quic.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-serde = { workspace = true, features = ["bincode"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }


[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
cryprot-core = { workspace = true, features = ["__testing"] }
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
harness = false
name = "bench"
required-features = ["__testing"]
