[package]
edition = "2021"
name = "cryprot-ot"
version = "0.1.0"

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
bitvec = { workspace = true, features = ["serde"] }
bytemuck.workspace = true
cryprot-codes.workspace = true
cryprot-core = { workspace = true, features = ["tokio-rayon"] }
cryprot-net.workspace = true
cryprot-pprf.workspace = true
curve25519-dalek = { workspace = true, features = ["rand_core", "serde"] }
futures.workspace = true
rand.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
cryprot-core = { workspace = true, features = ["__testing"] }
cryprot-net = { workspace = true, features = ["__testing"] }
tokio = { workspace = true, features = ["full"] }

[[bench]]
harness = false
name = "bench"
