[package]
description = "Implementation of a Oblivious Transfer extension protocols."
edition = "2024"
keywords = ["iknp", "kos", "oblivious-transfer", "silent-ot", "simplest-ot"]
license = "MIT"
name = "cryprot-ot"
version = "0.2.1"

authors.workspace = true
repository.workspace = true

[features]
# Use ML-KEM-based OT for base OT.
ml-kem-base-ot = []

[lints]
workspace = true

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
bitvec = { workspace = true, features = ["serde"] }
bytemuck.workspace = true
cryprot-codes.workspace = true
cryprot-core = { workspace = true, features = ["tokio-rayon"] }
cryprot-net.workspace = true
cryprot-pprf.workspace = true
curve25519-dalek = { workspace = true, features = ["rand_core", "serde"] }
futures.workspace = true
ml-kem.workspace = true
rand.workspace = true
serde_bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
cryprot-core = { workspace = true, features = ["__testing"] }
cryprot-net = { workspace = true, features = ["__testing"] }
tokio = { workspace = true, features = ["full"] }

[[bench]]
harness = false
name = "bench"
