[package]
description = "Implementation of a Oblivious Transfer extension protocols."
edition = "2024"
keywords = ["iknp", "kos", "oblivious-transfer", "silent-ot", "simplest-ot"]
license = "MIT"
name = "cryprot-ot"
version = "0.3.0"

authors.workspace = true
repository.workspace = true

[features]
# ML-KEM-based base OT. Pick only one variant.
ml-kem-base-ot-512 = ["_ml-kem-base-ot"]
ml-kem-base-ot-768 = ["_ml-kem-base-ot"]
ml-kem-base-ot-1024 = ["_ml-kem-base-ot"]
# Internal feature — do not enable directly.
_ml-kem-base-ot = ["dep:ml-kem", "dep:module-lattice", "dep:hybrid-array", "dep:sha3"]

[lints]
workspace = true

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
bitvec = { workspace = true, features = ["serde"] }
bytemuck.workspace = true
cfg-if.workspace = true
cryprot-codes.workspace = true
cryprot-core = { workspace = true, features = ["tokio-rayon"] }
cryprot-net.workspace = true
cryprot-pprf.workspace = true
curve25519-dalek = { workspace = true, features = ["rand_core", "serde"] }
futures.workspace = true
hybrid-array = { workspace = true, optional = true }
ml-kem = { workspace = true, optional = true }
module-lattice = { workspace = true, optional = true }
rand.workspace = true
sha3 = { workspace = true, optional = true }
serde_bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
cryprot-core = { workspace = true, features = ["__testing"] }
cryprot-net = { workspace = true, features = ["__testing"] }
tokio = { workspace = true, features = ["full"] }

[[bench]]
harness = false
name = "bench"
