[package]
description = "Implementation of a distributed PPRF for Silent OT"
edition = "2021"
license = "MIT"
keywords = ["pprf", "mpc", "silent-ot"]
name = "cryprot-pprf"
version = "0.1.0"

authors.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
bytemuck.workspace = true
cryprot-core = { workspace = true, features = ["num-traits", "tokio-rayon"] }
cryprot-net.workspace = true
futures.workspace = true
ndarray.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
cryprot-core = { workspace = true, features = ["__testing"] }
cryprot-net = { workspace = true, features = ["__testing"] }
tokio = { workspace = true, features = ["full"] }

[[bench]]
harness = false
name = "bench"
