[package]
edition = "2021"
name = "seec-codes"
version = "0.1.0"


[lib]
bench = false

[dependencies]
aes = { workspace = true, features = ["hazmat"] }
bytemuck.workspace = true
cpufeatures.workspace = true
fastdivide.workspace = true
hybrid-array = { workspace = true }
rand.workspace = true
seec-core.workspace = true
seq-macro.workspace = true

[dev-dependencies]
libote = { path = "../../SEEC/libs/libote-rs" }
criterion.workspace = true

[[bench]]
harness = false
name = "bench"
