[package]
edition = "2021"
name = "seec-core"
version = "0.1.0"

[features]
__testing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
blake3 = { version = "1.5.5", features = ["traits-preview"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
wide = { version = "0.7.32", features = ["serde"] }
