[package]
edition = "2021"
name = "seec-core"
version = "0.1.0"

[lib]
bench = false

[features]
__testing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
aes = "0.9.0-pre.2"
blake3 = { version = "1.5.5", features = ["traits-preview"] }
bytemuck = { workspace = true, features = ["derive"] }
hybrid-array = { version = "0.2.3", features = ["bytemuck"] }
libc = "0.2.169"
rand.workspace = true
rand_core.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
wide = { version = "0.7.32", features = ["serde"] }

[dev-dependencies]
criterion.workspace = true
proptest = "1.6.0"

[[bench]]
harness = false
name = "bench"
