[package]
edition = "2021"
name = "seec-net"
version = "0.1.0"

[features]
__bench = ["anyhow"]
metrics = ["serde/derive", "tracing-subscriber"]

[dependencies]
anyhow = { workspace = true, optional = true }
pin-project-lite.workspace = true
s2n-quic = "1.37.0"
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", optional = true }

[dev-dependencies]
anyhow.workspace = true
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }


[[bench]]
harness = false
name = "bench"
required-features = ["__bench"]
