[package]
edition = "2021"
name = "seec-ot"
version = "0.1.0"

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
bitvec.workspace = true
bytemuck.workspace = true
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde"] }
futures.workspace = true
rand.workspace = true
rayon = "1.10.0"
seec-core = {workspace = true, features = ["tokio-rayon"]}
seec-net.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
seec-core = { workspace = true, features = ["__testing"] }
seec-net = { workspace = true, features = ["__testing"] }
tokio = { workspace = true, features = ["full"] }

[[bench]]
harness = false
name = "bench"
